# sf6sc

./: Cargo.toml  README.md
src/: character.rs  lib.rs
