[package]
name = "sf6sc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
scraper = "0.19.0"
regex = "1.7.1"
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
once_cell = "1.19.0"
enum-ordinalize = "4.3.0"
